--- a/css/index.less
+++ b/css/index.less
@@ -1,7 +1,7 @@
 @import "reset.css";
 @import "common.css";
 body {
-    font: 16px Helvetica Neue, Helvetica, "PingFang SC", "\5FAE\8F6F\96C5\9ED1", "Tahoma", "Arial", "sans-serif";
+    font: 16px "PingFang-SC-Medium";
     color: #333;
 }
 
@@ -12,6 +12,7 @@ body {
         .swiper-banner {
             position: relative;
             overflow: hidden;
+            min-width: 1200px;
             height: 590px;
             .s-con-banner {
                 .swiper-wrapper {
@@ -49,7 +50,8 @@ body {
             box-sizing: border-box;
             background-color: #fff;
             .part-box {
-                min-width: 1200px;
+                width: 1200px;
+                margin: 0 auto;
             }
             .con-main {
                 display: inline-block;
@@ -93,7 +95,8 @@ body {
             box-sizing: border-box;
             background-color: #f5f7ff;
             .part-box {
-                min-width: 1200px;
+                width: 1200px;
+                margin: 0 auto;
             }
             .con-main {
                 display: inline-block;
@@ -137,7 +140,8 @@ body {
             box-sizing: border-box;
             background-color: #fff;
             .part-box {
-                min-width: 1200px;
+                width: 1200px;
+                margin: 0 auto;
             }
             .con-main {
                 display: inline-block;
@@ -211,7 +215,8 @@ body {
             text-align: center;
             background-color: #f5f7ff;
             .part-box {
-                min-width: 1200px;
+                width: 1200px;
+                margin: 0 auto;
             }
             .four-left {
                 display: inline-block;
@@ -262,6 +267,7 @@ body {
                 font-size: 24px;
                 text-align: center;
                 line-height: 48px;
+                transition: background-color 100ms linear;
                 color: #fff;
             }
             .four-btn:hover {
@@ -309,7 +315,8 @@ body {
             box-sizing: border-box;
             background-color: #fff;
             .part-box {
-                min-width: 1200px;
+                width: 1200px;
+                margin: 0 auto;
             }
             .con-main {
                 display: inline-block;
@@ -323,6 +330,7 @@ body {
                     margin: 0 8px;
                     box-shadow: 0px 3px 3px 0px rgba(96, 96, 96, 0.1);
                     border-radius: 5px;
+                    transition: all 300ms linear;
                     cursor: pointer;
                 }
                 .fif-con-item:hover {
@@ -367,7 +375,8 @@ body {
             box-sizing: border-box;
             background-color: #fff;
             .part-box {
-                min-width: 1200px;
+                width: 1200px;
+                margin: 0 auto;
             }
             .con-main {
                 margin-top: 96px;
