--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,7 @@
 @import "reset.css";
 @import "common.css";
 body {
-  font: 16px Helvetica Neue, Helvetica, "PingFang SC", "\5FAE\8F6F\96C5\9ED1", "Tahoma", "Arial", "sans-serif";
+  font: 16px "PingFang-SC-Medium";
   color: #333;
 }
 #index_wrp {
@@ -10,6 +10,7 @@ body {
 #index_wrp .top-head .swiper-banner {
   position: relative;
   overflow: hidden;
+  min-width: 1200px;
   height: 590px;
 }
 #index_wrp .top-head .swiper-banner .s-con-banner .swiper-wrapper {
@@ -44,7 +45,8 @@ body {
   background-color: #fff;
 }
 #index_wrp .main-content .con-part-one .part-box {
-  min-width: 1200px;
+  width: 1200px;
+  margin: 0 auto;
 }
 #index_wrp .main-content .con-part-one .con-main {
   display: inline-block;
@@ -87,7 +89,8 @@ body {
   background-color: #f5f7ff;
 }
 #index_wrp .main-content .con-part-two .part-box {
-  min-width: 1200px;
+  width: 1200px;
+  margin: 0 auto;
 }
 #index_wrp .main-content .con-part-two .con-main {
   display: inline-block;
@@ -131,7 +134,8 @@ body {
   background-color: #fff;
 }
 #index_wrp .main-content .con-part-thr .part-box {
-  min-width: 1200px;
+  width: 1200px;
+  margin: 0 auto;
 }
 #index_wrp .main-content .con-part-thr .con-main {
   display: inline-block;
@@ -204,7 +208,8 @@ body {
   background-color: #f5f7ff;
 }
 #index_wrp .main-content .con-part-four .part-box {
-  min-width: 1200px;
+  width: 1200px;
+  margin: 0 auto;
 }
 #index_wrp .main-content .con-part-four .four-left {
   display: inline-block;
@@ -250,6 +255,7 @@ body {
   font-size: 24px;
   text-align: center;
   line-height: 48px;
+  transition: background-color 100ms linear;
   color: #fff;
 }
 #index_wrp .main-content .con-part-four .four-btn:hover {
@@ -295,7 +301,8 @@ body {
   background-color: #fff;
 }
 #index_wrp .main-content .con-part-fif .part-box {
-  min-width: 1200px;
+  width: 1200px;
+  margin: 0 auto;
 }
 #index_wrp .main-content .con-part-fif .con-main {
   display: inline-block;
@@ -309,6 +316,7 @@ body {
   margin: 0 8px;
   box-shadow: 0px 3px 3px 0px rgba(96, 96, 96, 0.1);
   border-radius: 5px;
+  transition: all 300ms linear;
   cursor: pointer;
 }
 #index_wrp .main-content .con-part-fif .con-main .fif-con-item:hover {
@@ -349,7 +357,8 @@ body {
   background-color: #fff;
 }
 #index_wrp .main-content .con-part-six .part-box {
-  min-width: 1200px;
+  width: 1200px;
+  margin: 0 auto;
 }
 #index_wrp .main-content .con-part-six .con-main {
   margin-top: 96px;
