--- a/css/common.less
+++ b/css/common.less
@@ -118,8 +118,7 @@
 // 主要内容头部
 .title-main {
     text-align: center;
-    height: 80px;
-    line-height: 80px;
+    height: auto;
     vertical-align: middle;
     .img-left {
         display: inline-block;
