--- a/css/fw_web.css
+++ b/css/fw_web.css
@@ -96,10 +96,10 @@ body {
   color: #666;
 }
 #fw_web .main-content .con-part-two {
-  height: 710px;
   padding-top: 75px;
+  padding-bottom: 60px;
   box-sizing: border-box;
-  background-color: #f5f7ff;
+  background-color: #f7f7f7;
 }
 #fw_web .main-content .con-part-two .part-box {
   width: 1200px;
@@ -120,9 +120,67 @@ body {
   margin: 0 auto;
   font-size: 0;
 }
+#fw_web .main-content .con-part-two .two-item {
+  display: inline-block;
+  width: 360px;
+  height: 360px;
+  vertical-align: middle;
+  padding-top: 56px;
+  box-sizing: border-box;
+  margin: 0 15px 60px 0;
+  transition: all 400ms linear;
+  background-color: #fff;
+  cursor: pointer;
+}
+#fw_web .main-content .con-part-two .two-item:nth-of-type(1) {
+  border-top: 3px solid #43c5b9;
+}
+#fw_web .main-content .con-part-two .two-item:nth-of-type(2) {
+  border-top: 3px solid #efce4a;
+}
+#fw_web .main-content .con-part-two .two-item:nth-of-type(3) {
+  border-top: 3px solid #bf4e90;
+}
+#fw_web .main-content .con-part-two .two-item:nth-of-type(4) {
+  border-top: 3px solid #d75a4a;
+}
+#fw_web .main-content .con-part-two .two-item:nth-of-type(5) {
+  border-top: 3px solid #27a6eb;
+}
+#fw_web .main-content .con-part-two .two-item:nth-of-type(6) {
+  border-top: 3px solid #8674d3;
+}
+#fw_web .main-content .con-part-two .two-item:hover {
+  border-top: 16px solid #548dff;
+}
+#fw_web .main-content .con-part-two .two-link {
+  text-align: center;
+}
+#fw_web .main-content .con-part-two .two-link .two-img {
+  display: inline-block;
+  width: 64px;
+  height: 64px;
+  transition: all 1000ms linear;
+}
+#fw_web .main-content .con-part-two .two-link dt {
+  width: 216px;
+  margin: 0 auto;
+  font-size: 24px;
+  color: #333;
+}
+#fw_web .main-content .con-part-two .two-link dt:nth-of-type(1) {
+  margin-top: 30px;
+}
+#fw_web .main-content .con-part-two .two-link dd {
+  width: 200px;
+  margin: 30px auto 0;
+  font-size: 18px;
+  color: #666;
+}
 #fw_web .main-content .con-part-thr {
-  height: 870px;
-  padding-top: 140px;
+  height: auto;
+  padding-top: 90px;
+  padding-bottom: 120px;
   box-sizing: border-box;
   background-color: #fff;
 }
@@ -156,46 +214,46 @@ body {
   font-size: 0;
 }
 #fw_web .main-content .con-part-thr .thr-item {
+  overflow: hidden;
+  box-shadow: 0px 1px 7px 0px rgba(34, 24, 21, 0.2);
+}
+#fw_web .main-content .con-part-thr .thr-link {
   display: inline-block;
-  width: 350px;
-  padding-top: 40px;
-  margin: 0 4px;
-  box-sizing: border-box;
-  background-color: #fff;
-  transition: all 300ms linear;
-  border-radius: 5px;
-  border: solid 1px #e7e7e7;
-  cursor: pointer;
+  width: 100%;
 }
-#fw_web .main-content .con-part-thr .thr-item:hover {
-  background-color: #a8c5ff;
-  z-index: 1;
-  border: solid 1px #a8c5ff;
-}
-#fw_web .main-content .con-part-thr .thr-item:hover dt {
-  color: #fff;
-}
-#fw_web .main-content .con-part-thr .thr-item:hover dd {
-  color: #fff;
-}
-#fw_web .main-content .con-part-thr .thr-link img {
+#fw_web .main-content .con-part-thr .thr-left {
+  position: relative;
+  float: left;
   display: inline-block;
-  width: 87px;
-  margin: 0 auto;
-  height: auto;
+  width: 550px;
+  height: 300px;
+  vertical-align: middle;
+  background-color: #f1f1f1;
 }
-#fw_web .main-content .con-part-thr .thr-link dt {
-  margin: 17px 0;
-  font-size: 24px;
+#fw_web .main-content .con-part-thr .thr-left .thr-img {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-position: 50%;
+  background-repeat: no-repeat;
+}
+#fw_web .main-content .con-part-thr .thr-right {
+  vertical-align: middle;
+  display: inline-block;
+}
+#fw_web .main-content .con-part-thr .thr-right .r-title {
+  display: inline-block;
+  font-size: 28px;
   color: #333;
 }
-#fw_web .main-content .con-part-thr .thr-link dd {
-  overflow: hidden;
-  margin: 0 auto;
-  padding: 0 20px;
+#fw_web .main-content .con-part-thr .thr-right .r-intro {
+  display: inline-block;
   font-size: 18px;
-  line-height: 1.3;
-  height: 115px;
-  margin-bottom: 30px;
+  line-height: 1.4;
+  text-align: left;
   color: #666;
+}
+#fw_web .main-content .con-part-thr .thr-right .link-text {
+  display: inline-block;
 }
