--- a/css/fw_web.less
+++ b/css/fw_web.less
@@ -105,10 +105,10 @@ body {
             }
         }
         .con-part-two {
-            height: 710px;
             padding-top: 75px;
+            padding-bottom: 60px;
             box-sizing: border-box;
-            background-color: #f5f7ff;
+            background-color: #f7f7f7;
             .part-box {
                 width: 1200px;
                 margin: 0 auto;
@@ -129,15 +129,67 @@ body {
                 font-size: 0;
             }
             .two-item {
-              
+                display: inline-block;
+                width: 360px;
+                height: 360px;
+                vertical-align: middle;
+                padding-top: 56px;
+                box-sizing: border-box;
+                margin: 0 15px 60px 0;
+                transition: all 400ms linear;
+                background-color: #fff;
+                cursor: pointer;
             }
-            .two-link{
-                .two-img
+            .two-item:nth-of-type(1) {
+                border-top: 3px solid #43c5b9;
+            }
+            .two-item:nth-of-type(2) {
+                border-top: 3px solid #efce4a;
+            }
+            .two-item:nth-of-type(3) {
+                border-top: 3px solid #bf4e90;
+            }
+            .two-item:nth-of-type(4) {
+                border-top: 3px solid #d75a4a;
+            }
+            .two-item:nth-of-type(5) {
+                border-top: 3px solid #27a6eb;
+            }
+            .two-item:nth-of-type(6) {
+                border-top: 3px solid #8674d3;
+            }
+            .two-item:hover {
+                border-top: 16px solid rgb(84, 141, 255);
+            }
+            .two-link {
+                text-align: center;
+                .two-img {
+                    display: inline-block;
+                    width: 64px;
+                    height: 64px;
+                    transition: all 1000ms linear;
+                }
+                dt {
+                    width: 216px;
+                    margin: 0 auto;
+                    font-size: 24px;
+                    color: #333;
+                }
+                dt:nth-of-type(1) {
+                    margin-top: 30px;
+                }
+                dd {
+                    width: 200px;
+                    margin: 30px auto 0;
+                    font-size: 18px;
+                    color: #666;
+                }
             }
         }
         .con-part-thr {
-            height: 870px;
-            padding-top: 140px;
+            height: auto;
+            padding-top: 90px;
+            padding-bottom: 120px;
             box-sizing: border-box;
             background-color: #fff;
             .part-box {
@@ -170,49 +222,47 @@ body {
                 font-size: 0;
             }
             .thr-item {
-                display: inline-block;
-                width: 350px;
-                padding-top: 40px;
-                margin: 0 4px;
-                box-sizing: border-box;
-                background-color: #fff;
-                transition: all 300ms linear;
-                border-radius: 5px;
-                border: solid 1px #e7e7e7;
-                cursor: pointer;
-            }
-            .thr-item:hover {
-                background-color: #a8c5ff;
-                z-index: 1;
-                border: solid 1px #a8c5ff;
-                dt {
-                    color: #fff;
-                }
-                dd {
-                    color: #fff;
-                }
+                overflow: hidden;
+                box-shadow: 0px 1px 7px 0px rgba(34, 24, 21, 0.2);
             }
             .thr-link {
-                img {
-                    display: inline-block;
-                    width: 87px;
-                    margin: 0 auto;
-                    height: auto;
+                display: inline-block;
+                width: 100%;
+            }
+            .thr-left {
+                position: relative;
+                float: left;
+                display: inline-block;
+                width: 550px;
+                height: 300px;
+                vertical-align: middle;
+                background-color: #f1f1f1;
+                .thr-img {
+                    position: absolute;
+                    width: 100%;
+                    height: 100%;
+                    background-size: cover;
+                    background-position: 50%;
+                    background-repeat: no-repeat;
                 }
-                dt {
-                    margin: 17px 0;
-                    font-size: 24px;
+            }
+            .thr-right {
+                vertical-align: middle;
+                display: inline-block;
+                .r-title {
+                    display: inline-block;
+                    font-size: 28px;
                     color: #333;
                 }
-                dd {
-                    overflow: hidden;
-                    margin: 0 auto;
-                    padding: 0 20px;
+                .r-intro {
+                    display: inline-block;
                     font-size: 18px;
-                    line-height: 1.3;
-                    height: 115px;
-                    margin-bottom: 30px;
+                    line-height: 1.4;
+                    text-align: left;
                     color: #666;
+                }
+                .link-text {
+                    display: inline-block;
                 }
             }
         }
