--- a/css/fw_web.css
+++ b/css/fw_web.css
@@ -180,7 +180,7 @@ body {
 #fw_web .main-content .con-part-thr {
   height: auto;
   padding-top: 90px;
-  padding-bottom: 120px;
+  padding-bottom: 80px;
   box-sizing: border-box;
   background-color: #fff;
 }
@@ -215,6 +215,7 @@ body {
 }
 #fw_web .main-content .con-part-thr .thr-item {
   overflow: hidden;
+  margin: 27px 10px;
   box-shadow: 0px 1px 7px 0px rgba(34, 24, 21, 0.2);
 }
 #fw_web .main-content .con-part-thr .thr-link {
@@ -224,7 +225,6 @@ body {
 #fw_web .main-content .con-part-thr .thr-left {
   position: relative;
   float: left;
-  display: inline-block;
   width: 550px;
   height: 300px;
   vertical-align: middle;
@@ -239,6 +239,9 @@ body {
   background-repeat: no-repeat;
 }
 #fw_web .main-content .con-part-thr .thr-right {
+  width: 50%;
+  text-align: left;
+  margin-top: 45px;
   vertical-align: middle;
   display: inline-block;
 }
@@ -249,11 +252,22 @@ body {
 }
 #fw_web .main-content .con-part-thr .thr-right .r-intro {
   display: inline-block;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 4;
+  -webkit-box-orient: vertical;
+  height: 120px;
+  margin-top: 30px;
   font-size: 18px;
-  line-height: 1.4;
+  line-height: 1.7;
   text-align: left;
   color: #666;
 }
 #fw_web .main-content .con-part-thr .thr-right .link-text {
-  display: inline-block;
+  float: right;
+  text-align: right;
+  margin-top: 20px;
+  font-size: 18px;
+  color: #2d72fc;
 }
